Update CSS, Created Attendance and Subject

--- a/admin/attendance.html
+++ b/admin/attendance.html
@@ -67,13 +67,13 @@
                     <i class="fas fa-calendar-alt"></i> Syllabus
                 </a>
             </li>
-              <li class="nav-item active">
+              <li class="nav-item">
                 <a class="nav-link" href="../admin/subject.html">
                     <i class="fas fa-calendar-alt"></i> Subject
                 </a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../admin/attendance.html">
+            <li class="nav-item active">
+                <a class="nav-link " href="../admin/attendance.html">
                     <i class="fas fa-calendar-alt"></i> Attendance
                 </a>
             </li>
@@ -84,7 +84,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="#"> 
                     <i class="fas fa-book"></i> Exams
                 </a>
             </li>
@@ -124,7 +124,7 @@
     <nav class="navbar navbar-light  py-2 ">
       <div class="container-fluid d-flex justify-content-between align-items-center">
         <!-- Left: Site Logo/Title -->
-        <span class="navbar-brand mb-0 h3 text-dark">Dashboard / Subject</span>
+        <span class="navbar-brand mb-0 h3 text-dark">Dashboard / Attendance</span>
         <!-- Right: Icons -->
         <div class="d-flex align-items-center gap-4">
           <!-- Bell Icon with Badge -->
@@ -204,7 +204,7 @@
               <span>Mr. Admin</span>
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
-              <li><a class="dropdown-item" href="../profile.html">Profile</a></li>
+              <li><a class="dropdown-item" href="../admin/teacher-profile.html">Profile</a></li>
               <li><a class="dropdown-item" href="#">Settings</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">Logout</a></li>
@@ -256,22 +256,21 @@
   </div>
 </div>
 
-    
-<!-- Subject Table -->
+<!-- Attendance Table -->
 <div class="card pt-4 pb-4" style="margin-left: 62px; margin-right: 62px;">
     <div class="card-header d-flex justify-content-between align-items-center bg-white">
         <!-- Left Side: Section Title and Suboptions -->
         <div>
-            <h5 class="mb-0 fw-bold">All Subjects</h5>
-            <small class="fw-normal">Manage your subjects from start to finish with complete control.</small>
+            <h5 class="mb-0 fw-bold">All Attendance</h5>
+            <small class="fw-normal">Manage student attendance with complete control.</small>
         </div>
 
         <!-- Right Side: Download and Add Buttons -->
         <div class="d-flex gap-2">
             <div class="add-container">
-                <button class="add-btn" data-bs-toggle="modal" data-bs-target="#addSubjectModal">
+                <button class="add-btn" data-bs-toggle="modal" data-bs-target="#addAttendanceModal">
                     <i class="fas fa-plus"></i>
-                    <span class="btn-text">Add New Subject</span>
+                    <span class="btn-text">Add New Attendance</span>
                 </button>
             </div>
 
@@ -289,45 +288,75 @@
         </div>
     </div>
 
-    <!-- Filter Section with Search -->
+    <!-- Filter Section with Search and Filters -->
     <div class="d-flex justify-content-between mt-3 mb-3 w-100 gap-4 ps-4 pe-4">
         <!-- Left: Search Bar -->
         <div class="d-flex w-25">
-            <input type="text" id="search" class="form-control w-100" placeholder="Search" onkeyup="filterTable()"/>
+            <input type="text" id="search" class="form-control w-100" placeholder="Search" onkeyup="filterTable()" />
         </div>
 
-        <!-- Right: Filter by Status -->
+        <!-- Right: Filter Date, Status, and Select Department -->
         <div class="d-flex w-50 gap-3 justify-content-end">
+            <!-- Filter Date Select Dropdown -->
+            <select class="form-select w-25" aria-label="Filter Date Select" style="font-size: 14px!important;">
+                <option selected>Filter Date Select</option>
+                <option value="1">Weekly</option>
+                <option value="2">Monthly</option>
+                <option value="3">Yearly</option>
+            </select>
+
             <!-- Status Select Dropdown -->
             <select class="form-select w-25" id="statusSelect" aria-label="Status Select" style="font-size: 14px!important;" onchange="filterTableSelect()">
                 <option selected>Status Select</option>
                 <option value="Active">Active</option>
-                <option value="Inactive">Inactive</option>
+                <option value="On Leave">On Leave</option>
+                <option value="Pending">Pending</option>
+                <option value="Completed">Completed</option>
             </select>
+
+            <!-- Select Class Dropdown -->
+            <select class="form-select w-25" id="classSelect" aria-label="Select Class" style="font-size: 14px!important;" onchange="filterTableSelect()">
+                <option selected>Select Class</option>
+                <option value="Class 1">Class 1</option>
+                <option value="Class 2">Class 2</option>
+                <option value="Class 3">Class 3</option>
+                <option value="Class 4">Class 4</option>
+                <option value="Class 5">Class 5</option>
+                <option value="Class 6">Class 6</option>
+                <option value="Class 7">Class 7</option>
+                <option value="Class 8">Class 8</option>
+            </select>
+
         </div>
     </div>
 
     <!-- Table Data -->
-    <table class="table ps-3 pe-3" id="subjectTable" data-toggle="table" data-sortable="true" data-classes="table">
+    <table class="table ps-3 pe-3" id="myTable" data-toggle="table" data-sortable="true" data-classes="table">
         <thead>
             <tr class="custom-header">
                 <!-- Checkbox for Select All -->
-                <th class="ps-3 pe-3"><input type="checkbox" id="selectAll" onclick="toggleSelectAll()"/></th>
-                <th class="ps-3 pe-3" data-sortable="true">Subject Name</th>
-                <th class="ps-3 pe-3" data-sortable="true">Subject Code</th>
-                <th class="ps-3 pe-3" data-sortable="true">Department</th>
+                <th class="ps-3 pe-3"><input type="checkbox" id="selectAll" onclick="toggleSelectAll()" /></th>
+                <th class="ps-3 pe-3">Name</th>
+                <th class="ps-3 pe-3" data-sortable="true">Class</th> <!-- Changed from Subject to Class -->
+                <th class="ps-3 pe-3" data-sortable="true">Email</th>
                 <th class="ps-3 pe-3">Status</th>
+                <th class="ps-3 pe-3">Attendance</th> <!-- New Column for Attendance -->
                 <th class="ps-3 pe-3">Action</th>
             </tr>
         </thead>
-        <tbody id="subjectTableBody">
+        <tbody id="tableBody">
             <!-- Row 1 -->
             <tr>
                 <td class="ps-4 pe-4"><input type="checkbox" class="selectRow" id="checkbox1" /></td>
-                <td class="ps-4 pe-4">Mathematics</td>
-                <td class="ps-4 pe-4">MATH101</td>
-                <td class="ps-4 pe-4">Science</td>
+                <td class="ps-4 pe-4">Sarah Johnson</td>
+                <td class="ps-4 pe-4">Class 5</td> <!-- Class added here -->
+                <td class="ps-4 pe-4">sarah.johnson@example.com</td>
                 <td class="ps-4 pe-4"><span class="badge bg-success">Active</span></td>
+                <td class="ps-4 pe-4">
+                    <div class="progress">
+                        <div class="progress-bar bg-success" role="progressbar" style="width: 85%;">85%</div>
+                    </div>
+                </td>
                 <td class="ps-4 pe-4">
                     <!-- Dropdown with 3 dots -->
                     <div class="dropdown">
@@ -345,10 +374,15 @@
             <!-- Row 2 -->
             <tr>
                 <td class="ps-4 pe-4"><input type="checkbox" class="selectRow" id="checkbox2" /></td>
-                <td class="ps-4 pe-4">Physics</td>
-                <td class="ps-4 pe-4">PHYS101</td>
-                <td class="ps-4 pe-4">Science</td>
-                <td class="ps-4 pe-4"><span class="badge bg-warning">Inactive</span></td>
+                <td class="ps-4 pe-4">Mark Lee</td>
+                <td class="ps-4 pe-4">Class 7</td> <!-- Class added here -->
+                <td class="ps-4 pe-4">mark.lee@example.com</td>
+                <td class="ps-4 pe-4"><span class="badge bg-warning">On Leave</span></td>
+                <td class="ps-4 pe-4">
+                    <div class="progress">
+                        <div class="progress-bar bg-danger" role="progressbar" style="width: 40%;">40%</div>
+                    </div>
+                </td>
                 <td class="ps-4 pe-4">
                     <!-- Dropdown with 3 dots -->
                     <div class="dropdown">
@@ -366,10 +400,15 @@
             <!-- Row 3 -->
             <tr>
                 <td class="ps-4 pe-4"><input type="checkbox" class="selectRow" id="checkbox3" /></td>
-                <td class="ps-4 pe-4">Chemistry</td>
-                <td class="ps-4 pe-4">CHEM101</td>
-                <td class="ps-4 pe-4">Science</td>
+                <td class="ps-4 pe-4">Emma Williams</td>
+                <td class="ps-4 pe-4">Class 9</td> <!-- Class added here -->
+                <td class="ps-4 pe-4">emma.williams@example.com</td>
                 <td class="ps-4 pe-4"><span class="badge bg-success">Active</span></td>
+                <td class="ps-4 pe-4">
+                    <div class="progress">
+                        <div class="progress-bar bg-success" role="progressbar" style="width: 90%;">90%</div>
+                    </div>
+                </td>
                 <td class="ps-4 pe-4">
                     <!-- Dropdown with 3 dots -->
                     <div class="dropdown">
@@ -384,197 +423,26 @@
                     </div>
                 </td>
             </tr>
-            <!-- Additional Rows for Subject Table -->
-<tr>
-    <td class="ps-4 pe-4"><input type="checkbox" class="selectRow" id="checkbox4" /></td>
-    <td class="ps-4 pe-4">Biology</td>
-    <td class="ps-4 pe-4">BIO101</td>
-    <td class="ps-4 pe-4">Science</td>
-    <td class="ps-4 pe-4"><span class="badge bg-success">Active</span></td>
-    <td class="ps-4 pe-4">
-        <!-- Dropdown with 3 dots -->
-        <div class="dropdown">
-            <button class="btn btn-link dropdown-toggle" type="button" id="dropdownMenuButton4" data-bs-toggle="dropdown" aria-expanded="false">
-                <i class="bi bi-three-dots-vertical"></i>
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton4">
-                <li><a class="dropdown-item" href="#">Overview</a></li>
-                <li><a class="dropdown-item" href="#">Edit</a></li>
-                <li><a class="dropdown-item text-danger" href="#">Delete</a></li>
-            </ul>
-        </div>
-    </td>
-</tr>
-
-<tr>
-    <td class="ps-4 pe-4"><input type="checkbox" class="selectRow" id="checkbox5" /></td>
-    <td class="ps-4 pe-4">English</td>
-    <td class="ps-4 pe-4">ENG101</td>
-    <td class="ps-4 pe-4">Arts</td>
-    <td class="ps-4 pe-4"><span class="badge bg-success">Active</span></td>
-    <td class="ps-4 pe-4">
-        <!-- Dropdown with 3 dots -->
-        <div class="dropdown">
-            <button class="btn btn-link dropdown-toggle" type="button" id="dropdownMenuButton5" data-bs-toggle="dropdown" aria-expanded="false">
-                <i class="bi bi-three-dots-vertical"></i>
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton5">
-                <li><a class="dropdown-item" href="#">Overview</a></li>
-                <li><a class="dropdown-item" href="#">Edit</a></li>
-                <li><a class="dropdown-item text-danger" href="#">Delete</a></li>
-            </ul>
-        </div>
-    </td>
-</tr>
-
-<tr>
-    <td class="ps-4 pe-4"><input type="checkbox" class="selectRow" id="checkbox6" /></td>
-    <td class="ps-4 pe-4">Computer Science</td>
-    <td class="ps-4 pe-4">CS101</td>
-    <td class="ps-4 pe-4">Engineering</td>
-    <td class="ps-4 pe-4"><span class="badge bg-warning">Inactive</span></td>
-    <td class="ps-4 pe-4">
-        <!-- Dropdown with 3 dots -->
-        <div class="dropdown">
-            <button class="btn btn-link dropdown-toggle" type="button" id="dropdownMenuButton6" data-bs-toggle="dropdown" aria-expanded="false">
-                <i class="bi bi-three-dots-vertical"></i>
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton6">
-                <li><a class="dropdown-item" href="#">Overview</a></li>
-                <li><a class="dropdown-item" href="#">Edit</a></li>
-                <li><a class="dropdown-item text-danger" href="#">Delete</a></li>
-            </ul>
-        </div>
-    </td>
-</tr>
-
-<tr>
-    <td class="ps-4 pe-4"><input type="checkbox" class="selectRow" id="checkbox7" /></td>
-    <td class="ps-4 pe-4">History</td>
-    <td class="ps-4 pe-4">HIST101</td>
-    <td class="ps-4 pe-4">Arts</td>
-    <td class="ps-4 pe-4"><span class="badge bg-success">Active</span></td>
-    <td class="ps-4 pe-4">
-        <!-- Dropdown with 3 dots -->
-        <div class="dropdown">
-            <button class="btn btn-link dropdown-toggle" type="button" id="dropdownMenuButton7" data-bs-toggle="dropdown" aria-expanded="false">
-                <i class="bi bi-three-dots-vertical"></i>
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton7">
-                <li><a class="dropdown-item" href="#">Overview</a></li>
-                <li><a class="dropdown-item" href="#">Edit</a></li>
-                <li><a class="dropdown-item text-danger" href="#">Delete</a></li>
-            </ul>
-        </div>
-    </td>
-</tr>
-
-<tr>
-    <td class="ps-4 pe-4"><input type="checkbox" class="selectRow" id="checkbox8" /></td>
-    <td class="ps-4 pe-4">Economics</td>
-    <td class="ps-4 pe-4">ECO101</td>
-    <td class="ps-4 pe-4">Commerce</td>
-    <td class="ps-4 pe-4"><span class="badge bg-success">Active</span></td>
-    <td class="ps-4 pe-4">
-        <!-- Dropdown with 3 dots -->
-        <div class="dropdown">
-            <button class="btn btn-link dropdown-toggle" type="button" id="dropdownMenuButton8" data-bs-toggle="dropdown" aria-expanded="false">
-                <i class="bi bi-three-dots-vertical"></i>
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton8">
-                <li><a class="dropdown-item" href="#">Overview</a></li>
-                <li><a class="dropdown-item" href="#">Edit</a></li>
-                <li><a class="dropdown-item text-danger" href="#">Delete</a></li>
-            </ul>
-        </div>
-    </td>
-</tr>
-
-<tr>
-    <td class="ps-4 pe-4"><input type="checkbox" class="selectRow" id="checkbox9" /></td>
-    <td class="ps-4 pe-4">Physical Education</td>
-    <td class="ps-4 pe-4">PE101</td>
-    <td class="ps-4 pe-4">Arts</td>
-    <td class="ps-4 pe-4"><span class="badge bg-success">Active</span></td>
-    <td class="ps-4 pe-4">
-        <!-- Dropdown with 3 dots -->
-        <div class="dropdown">
-            <button class="btn btn-link dropdown-toggle" type="button" id="dropdownMenuButton9" data-bs-toggle="dropdown" aria-expanded="false">
-                <i class="bi bi-three-dots-vertical"></i>
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton9">
-                <li><a class="dropdown-item" href="#">Overview</a></li>
-                <li><a class="dropdown-item" href="#">Edit</a></li>
-                <li><a class="dropdown-item text-danger" href="#">Delete</a></li>
-            </ul>
-        </div>
-    </td>
-</tr>
-
         </tbody>
     </table>
 
     <!-- Pagination Controls -->
     <div class="d-flex justify-content-between pt-4 pe-4 ps-4">
-        <!-- Showing results text -->
         <div>Showing 1 to 3 of 3 entries</div>
-        
-        <!-- Pagination with Previous, Next, and page numbers -->
         <div>
             <button class="btn btn-outline-primary" style="color:#727171; font-size: 12px; border: 1px solid #d3d1d1;">
-                <i class="bi bi-chevron-left"></i> Previous
+                <i class="bi bi-chevron-left"></i>Previous
             </button>
             <button class="btn btn-outline-primary" style="color:#727171; font-size: 12px; border: 1px solid #d3d1d1;">
                 <span>1</span>
             </button>
             <button class="btn btn-outline-primary" style="color:#727171; font-size: 12px; border: 1px solid #d3d1d1;">
-                <span>2</span>
+                <span >2</span>
             </button>
-            <button class="btn btn-outline-primary" style="color:#727171; font-size: 12px; border: 1px solid #d3d1d1;"> Next
-                <i class="bi bi-chevron-right"></i>
+            <button class="btn btn-outline-primary" style="color:#727171; font-size: 12px; border: 1px solid #d3d1d1;" >
+                Next <i class="bi bi-chevron-right"></i>
             </button>
         </div>
-    </div>
-</div>
-
-<!-- Add New Subject Modal -->
-<div class="modal fade" id="addSubjectModal" tabindex="-1" aria-labelledby="addSubjectModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <form class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="addSubjectModalLabel">Add New Subject</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <div class="mb-3">
-                    <label for="subjectName" class="form-label">Subject Name</label>
-                    <input type="text" class="form-control" id="subjectName" required>
-                </div>
-                <div class="mb-3">
-                    <label for="subjectCode" class="form-label">Subject Code</label>
-                    <input type="text" class="form-control" id="subjectCode" required>
-                </div>
-                <div class="mb-3">
-                    <label for="department" class="form-label">Department</label>
-                    <select class="form-select" id="department" required>
-                        <option selected>Choose Department</option>
-                        <option value="Science">Science</option>
-                        <option value="Arts">Arts</option>
-                        <option value="Commerce">Commerce</option>
-                    </select>
-                </div>
-                <div class="mb-3">
-                    <label for="subjectStatus" class="form-label">Status</label>
-                    <select class="form-select" id="subjectStatus" required>
-                        <option value="Active">Active</option>
-                        <option value="Inactive">Inactive</option>
-                    </select>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="submit" class="btn btn-success">Add Subject</button>
-            </div>
-        </form>
     </div>
 </div>
 
