student,parents,, class,update

--- a/admin/teacher.html
+++ b/admin/teacher.html
@@ -39,7 +39,7 @@
     <!-- Sidebar -->
     <div class="sidebar">
         <div class="sidebar-header">
-            <h3><b>EDUHELM</b></h3>
+            <h3><b>EDHELM</b></h3>
         </div>
         <ul class="nav flex-column">
             <li class="nav-item">
@@ -50,6 +50,11 @@
             <li class="nav-item">
                 <a class="nav-link" href="../admin/student.html">
                     <i class="fas fa-users"></i> Students
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../admin/parent.html">
+                    <i class="fas fa-users"></i> Parents
                 </a>
             </li>
             <li class="nav-item active">
@@ -124,7 +129,7 @@
     <nav class="navbar navbar-light  py-2 ">
       <div class="container-fluid d-flex justify-content-between align-items-center">
         <!-- Left: Site Logo/Title -->
-        <span class="navbar-brand mb-0 h3 text-dark">Dashboard / Teacher</span>
+        <span class="navbar-brand mb-0 h3 text-dark">Dashboard / Teachers</span>
         <!-- Right: Icons -->
         <div class="d-flex align-items-center gap-4">
           <!-- Bell Icon with Badge -->
@@ -141,7 +146,6 @@
             <!-- Dropdown for notifications -->
           <!-- Notification Dropdown -->
   <!-- Include Font Awesome CDN for icons -->
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
 <ul class="dropdown-menu dropdown-menu-end custom-dropdown-width" aria-labelledby="notificationDropdown">
     <!-- Notification Header -->
@@ -321,7 +325,7 @@
         <tr>
             <td class="ps-4 pe-4"><input type="checkbox" class="selectRow" id="checkbox1" /></td>
             <td class="ps-4 pe-4"><img src="../assests/images/default.png" alt="Teacher" class="img-fluid rounded-circle small-image"></td>
-            <td class="ps-4 pe-4">Sarah Johnson</td>
+            <td class="ps-4 pe-4">Mr. Zain</td>
             <td class="ps-4 pe-4">Mathematics</td>
             <td class="ps-4 pe-4">sarah.johnson@example.com</td>
             <td class="ps-4 pe-4"><span class="badge bg-success">Active</span></td>
@@ -343,7 +347,7 @@
         <tr>
             <td class="ps-4 pe-4"><input type="checkbox" class="selectRow" id="checkbox2" /></td>
             <td class="ps-4 pe-4"><img src="../assests/images/default.png" alt="Teacher" class="img-fluid rounded-circle small-image"></td>
-            <td class="ps-4 pe-4">Mark Lee</td>
+            <td class="ps-4 pe-4">Mr. Ahmed</td>
             <td class="ps-4 pe-4">History</td>
             <td class="ps-4 pe-4">mark.lee@example.com</td>
             <td class="ps-4 pe-4"><span class="badge bg-warning">On Leave</span></td>
@@ -365,7 +369,7 @@
         <tr>
             <td class="ps-4 pe-4"><input type="checkbox" class="selectRow" id="checkbox3" /></td>
             <td class="ps-4 pe-4"><img src="../assests/images/default.png" alt="Teacher" class="img-fluid rounded-circle small-image"></td>
-            <td class="ps-4 pe-4">Emma Williams</td>
+            <td class="ps-4 pe-4">Ms. Sarah</td>
             <td class="ps-4 pe-4">Physics</td>
             <td class="ps-4 pe-4">emma.williams@example.com</td>
             <td class="ps-4 pe-4"><span class="badge bg-success">Active</span></td>
@@ -387,7 +391,7 @@
         <tr>
             <td class="ps-4 pe-4"><input type="checkbox" class="selectRow" id="checkbox4" /></td>
             <td class="ps-4 pe-4"><img src="../assests/images/default.png" alt="Teacher" class="img-fluid rounded-circle small-image"></td>
-            <td class="ps-4 pe-4">John Smith</td>
+            <td class="ps-4 pe-4">Mr. Hassan</td>
             <td class="ps-4 pe-4">Chemistry</td>
             <td class="ps-4 pe-4">john.smith@example.com</td>
             <td class="ps-4 pe-4"><span class="badge bg-success">Active</span></td>
@@ -409,7 +413,7 @@
         <tr>
             <td class="ps-4 pe-4"><input type="checkbox" class="selectRow" id="checkbox5" /></td>
             <td class="ps-4 pe-4"><img src="../assests/images/default.png" alt="Teacher" class="img-fluid rounded-circle small-image"></td>
-            <td class="ps-4 pe-4">Lily Adams</td>
+            <td class="ps-4 pe-4">	Ms.Fatima</td>
             <td class="ps-4 pe-4">Biology</td>
             <td class="ps-4 pe-4">lily.adams@example.com</td>
             <td class="ps-4 pe-4"><span class="badge bg-warning">On Leave</span></td>
@@ -431,7 +435,7 @@
         <tr>
             <td class="ps-4 pe-4"><input type="checkbox" class="selectRow" id="checkbox6" /></td>
             <td class="ps-4 pe-4"><img src="../assests/images/default.png" alt="Teacher" class="img-fluid rounded-circle small-image"></td>
-            <td class="ps-4 pe-4">James Brown</td>
+            <td class="ps-4 pe-4">Mr. Imran</td>
             <td class="ps-4 pe-4">Computer Science</td>
             <td class="ps-4 pe-4">james.brown@example.com</td>
             <td class="ps-4 pe-4"><span class="badge bg-success">Active</span></td>
