--- a/admin/class.html
+++ b/admin/class.html
@@ -38,7 +38,7 @@
 
 
     <!-- Sidebar -->
-    <<div class="sidebar">
+    <div class="sidebar">
         <div class="sidebar-header">
             <h3><b>EDHELM</b></h3>
         </div>
