--- a/admin/class.html
+++ b/admin/class.html
@@ -38,7 +38,7 @@
 
 
     <!-- Sidebar -->
-    <<div class="sidebar">
+    <div class="sidebar">
         <div class="sidebar-header">
             <h3><b>EDHELM</b></h3>
         </div>
@@ -66,11 +66,6 @@
             <li class="nav-item active">
                 <a class="nav-link" href="../admin/class.html">
                     <i class="fas fa-school"></i> Classes
-                </a>
-            </li>
-               <li class="nav-item">
-                <a class="nav-link" href="../admin/syllabus.html">
-                    <i class="fas fa-calendar-alt"></i> Syllabus
                 </a>
             </li>
               <li class="nav-item">
