update side bar

--- a/admin/attendance.html
+++ b/admin/attendance.html
@@ -37,7 +37,7 @@
 
 
     <!-- Sidebar -->
-    <div class="sidebar">
+     <div class="sidebar">
         <div class="sidebar-header">
             <h3><b>EDHELM</b></h3>
         </div>
@@ -53,6 +53,11 @@
                 </a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="../admin/parent.html">
+                    <i class="fas fa-users"></i> Parents
+                </a>
+            </li>
+            <li class="nav-item ">
                 <a class="nav-link" href="../admin/teacher.html">
                     <i class="fas fa-chalkboard-teacher"></i> Teachers
                 </a>
@@ -61,13 +66,14 @@
                 <a class="nav-link" href="../admin/class.html">
                     <i class="fas fa-school"></i> Classes
                 </a>
+            </li>
               <li class="nav-item">
                 <a class="nav-link" href="../admin/subject.html">
                     <i class="fas fa-calendar-alt"></i> Subject
                 </a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link " href="../admin/attendance.html">
+                <a class="nav-link" href="../admin/attendance.html">
                     <i class="fas fa-calendar-alt"></i> Attendance
                 </a>
             </li>
@@ -78,7 +84,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#"> 
+                <a class="nav-link" href="#">
                     <i class="fas fa-book"></i> Exams
                 </a>
             </li>
@@ -99,6 +105,7 @@
             </li>
         </ul>
     </div>
+
 
     
           <!-- Sidebar Toggle Button for mobile -->
