--- a/admin/class.html
+++ b/admin/class.html
@@ -38,7 +38,7 @@
 
 
     <!-- Sidebar -->
-    <div class="sidebar">
+     <div class="sidebar">
         <div class="sidebar-header">
             <h3><b>EDHELM</b></h3>
         </div>
@@ -74,7 +74,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="../admin/attendance.html">
                     <i class="fas fa-calendar-alt"></i> Attendance
                 </a>
             </li>
@@ -106,6 +106,7 @@
             </li>
         </ul>
     </div>
+
 
 
     
