--- a/admin/subject.html
+++ b/admin/subject.html
@@ -53,6 +53,11 @@
                 </a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="../admin/parent.html">
+                    <i class="fas fa-users"></i> Parents
+                </a>
+            </li>
+            <li class="nav-item ">
                 <a class="nav-link" href="../admin/teacher.html">
                     <i class="fas fa-chalkboard-teacher"></i> Teachers
                 </a>
