--- a/admin/parent.html
+++ b/admin/parent.html
@@ -37,7 +37,7 @@
 
 
     <!-- Sidebar -->
-    <div class="sidebar">
+     <div class="sidebar">
         <div class="sidebar-header">
             <h3><b>EDHELM</b></h3>
         </div>
@@ -66,13 +66,14 @@
                 <a class="nav-link" href="../admin/class.html">
                     <i class="fas fa-school"></i> Classes
                 </a>
+            </li>
               <li class="nav-item">
                 <a class="nav-link" href="../admin/subject.html">
                     <i class="fas fa-calendar-alt"></i> Subject
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="../admin/attendance.html">
                     <i class="fas fa-calendar-alt"></i> Attendance
                 </a>
             </li>
