Fees,class,registeration form,sidebar, header, topbar

--- a/admin/class.html
+++ b/admin/class.html
@@ -317,7 +317,7 @@
             <!-- Checkbox for Select All -->
             <th class="ps-3 pe-4"><input type="checkbox" id="selectAll"onclick="toggleSelectAll()" /></th> 
             <th class="ps-4 pe-4">Class </th>
-            <th class="ps-4 pe-4" data-sortable="true">Teachers</th>
+            <th class="ps-4 pe-4" data-sortable="true">Teacher Name</th>
              <th class="ps-4 pe-4">	No. of Students</th>
             <th class="ps-4 pe-4" data-sortable="true">Schedule</th>
             <th class="ps-4 pe-4" data-sortable="true">	Subject</th>
