--- a/admin/teacher.html
+++ b/admin/teacher.html
@@ -345,7 +345,7 @@
             <!-- Checkbox for Select All -->
             <th class="ps-3 pe-4"><input type="checkbox" id="selectAll"onclick="toggleSelectAll()" /></th> 
             <th class="ps-4 pe-4">Photo</th>
-            <th class="ps-4 pe-4" data-sortable="true">Name</th>
+            <th class="ps-4 pe-4" data-sortable="true">Teacher Name</th>
             <th class="ps-4 pe-4" data-sortable="true">Subject</th>
             <th class="ps-4 pe-4" data-sortable="true">Email</th>
             <th class="ps-4 pe-4">Status</th>
